--- a/1_user_rfm/user_rfm.ipynb
+++ b/1_user_rfm/user_rfm.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "**Задача**\n",
     "\n",
-    "Выделить по покупкам за этот год сегменты пользовавателей для анализа продактом, поставновки задачи для клинтского сервиса по работе с каждйм сегментом"
+    "Выделить по покупкам за этот год сегменты пользовавателей для анализа продактом, поставновки задачи для клинтского сервиса по работе с каждым сегментом. Рассматриваемый перод - текущий год (01.01.2023 - 25.09.2023)"
    ]
   },
   {
@@ -2879,7 +2879,95 @@
    "id": "aac507b5",
    "metadata": {},
    "source": [
-    "У этих пользователей выручка меньше, но частота покупок высокая и совершали они их не так давно. Этот сегмент по итогу основывается на парковках"
+    "У этих пользователей выручка меньше, но частота покупок высокая и совершали они их не так давно. Выведем тарифы, которые приобритают этот сегмент"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "5baba90b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>policy_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>combo</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>km</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>parking</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>theft</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>time</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      type  policy_id\n",
+       "0    combo          1\n",
+       "1       km         12\n",
+       "2  parking         36\n",
+       "3    theft          3\n",
+       "4     time          2"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "potential_list = list(potential[\"user_id\"])\n",
+    "data.query('user_id in @potential_list').groupby('type').agg({'policy_id': 'count'}).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1116ad23",
+   "metadata": {},
+   "source": [
+    "Этот сегмент основывается на парковках, что логично, частые покупки с низким чеком"
    ]
   },
   {
